// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInfo should render contact info 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-rxsznm-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1anwj80-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        entryTime
      </div>
      dateFormat.datespan start, end
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-grow css-108dr7z-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-o7ym4l-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-17mdbs-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-olph29-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-12i7t8b-MuiGrid2-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-1qvf8lj-MuiGrid2-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          22
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          11
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-nzqy09-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1k27l00-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.official
      </div>
      official name, 0700-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1wj16pu-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.secretary
      </div>
      secretary name, 0700-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1udn7ko-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        paymentDetails
      </div>
      123 €event.costMember 123 €
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1bluvbh-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-143250c-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-3fh3fk-MuiChip-label"
        >
          priority.members
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1ccafew-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.description
      </div>
      event description text
    </div>
  </div>
</div>
`;

exports[`EventInfo should render event information 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-rxsznm-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1anwj80-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        entryTime
      </div>
      dateFormat.datespan start, end
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-grow css-108dr7z-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-o7ym4l-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-17mdbs-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-ah1px6-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1jhhan5-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-olph29-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-12i7t8b-MuiGrid2-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-1qvf8lj-MuiGrid2-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          22
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          11
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-nzqy09-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1k27l00-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.official
      </div>
      Teemu Toimitsija, 040-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1wj16pu-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.secretary
      </div>
      Siiri Sihteeri, 040-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1udn7ko-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        paymentDetails
      </div>
      123 €event.costMember 123 €
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1bluvbh-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-143250c-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-3fh3fk-MuiChip-label"
        >
          priority.members
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1ccafew-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-lqgvlr-MuiTypography-root"
      >
        event.description
      </div>
      event description text
    </div>
  </div>
</div>
`;
